objects/Item_In_Process_Formulas__c.object
<CustomObject>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overwrite_Non_Empty_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Non-Empty Values</label>
        <type>Checkbox</type>
    </fields>
    <label>Item - In Process Formulas</label>
    <nameField>
        <label>Item - In Process Formula Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item - In Process Formulas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>